# BGsystem3-configure

./: .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.vue  loadComp.ts  main.ts  router.ts  style.css  vMarkdown.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: invoke_commands.rs  main.rs
src/components/comp/: AuthorComp.vue  BlockComponent.vue  SelectDate.vue  SpeedDial.vue
src/components/monaco/: MonacoType.ts  VMonaco.vue
src/components/questions/: Random.vue  RandomQuestion.vue  Schedule.vue  SelectConfigFolder.vue  Style.vue
src/core/: calcFileHash.ts  loadFFmpeg.ts  uploader.ts  utils.ts
src/store/: config.ts  info.ts  signal.ts  types.ts
src/view/: AboutMe.vue  ConfigView.vue  HomeView.vue  ViewCode.vue
