[package]
name = "bgsystem3-configure"
version = "0.1.0"
description = "Configure tool for BGsystem3"
authors = ["HowardZhangdqs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "path-all", "fs-all", "dialog-all", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# window-vibrancy = "0.4.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
