[package]
name = "bgsystem3-configure"
version = "3.1.0"
description = "Configure tool for BGsystem3"
authors = [ "HowardZhangdqs" ]
edition = "2021"

[build-dependencies.tauri-build]
version = "1"
features = [ ]

[dependencies]
serde_json = "1"

  [dependencies.tauri]
  version = "1"
  features = [
  "shell-open",
  "path-all",
  "fs-all",
  "dialog-all",
  "window-all"
]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

[features]
custom-protocol = [ "tauri/custom-protocol" ]
